# SmartTap

./: .gitattributes  .gitignore  .npmrc  .prettierignore  CLAUDE.md  DEPLOY.md  LANDING-SPEC.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  test-landing.html  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/mobile/: .env.example  (+3 more)
backend/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json
backend/app/: config.py  dependencies.py  errors.py  main.py
backend/app/db/: __init__.py  campaigns.py  customers.py  google_connections.py  nfc_tags.py  otp_codes.py  reviews.py  rewards.py  segments.py  stamps.py  stripe_events.py  taps.py  tenant_members.py  tenants.py  users.py  whatsapp.py
backend/app/emails/: templates.py
backend/app/routers/: billing.py  campaigns.py  cron.py  customers.py  dashboard.py  google_oauth.py  health.py  me.py  nfc_tags.py  onboarding.py  reports.py  reviews.py  rewards.py  segments.py  taps.py  tenants.py  webhooks.py
backend/app/schemas/: billing.py  campaign.py  customer.py  dashboard.py  me.py  nfc_tag.py  onboarding.py  review.py  reward.py  segment.py  tap.py  tenant.py
backend/app/services/: anthropic_client.py  billing_service.py  bot_actions.py  bot_tools.py  campaign_service.py  customer_service.py  dashboard_service.py  email_service.py  google_client.py  monthly_email_service.py  monthly_report_service.py  nfc_tag_service.py  onboarding_service.py  otp_service.py  pdf_renderer.py  rate_limit.py  reactivation_service.py  resend_client.py  review_nudge_service.py  review_response_service.py  review_stats_service.py  reward_service.py  segment_service.py  stamp_engine.py  stripe_client.py  supabase_client.py  tap_service.py  tenant_service.py  trial_service.py  twilio_client.py  twilio_sms_client.py  visit_thankyou_service.py  webhook_service.py  whatsapp_bot_service.py  whatsapp_client.py
backend/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_stripe_webhook_events.sql  004_campaigns_indexes.sql  005_customers_reactivation.sql  006_customer_segments.sql  007_customers_review_nudge.sql  008_whatsapp_bot.sql  009_review_responses.sql  010_whatsapp_pending_actions.sql  011_encrypt_google_refresh_token.sql  012_customer_otp_codes.sql  013_nfc_tag_number.sql  014_customer_thankyou_cooldown.sql  015_google_connection_account_name.sql  README.md
backend/tests/: test_anthropic_client.py  test_billing_service.py  test_bot_actions.py  test_bot_tools.py  test_campaign_service.py  test_customer_list.py  test_customer_search_sanitize.py  test_dashboard_service.py  test_email_service.py  test_email_templates.py  test_google_client.py  test_google_oauth.py  test_health.py  test_monthly_email_service.py  test_monthly_report_service.py  test_nfc_tag_service.py  test_onboarding_service.py  test_otp_service.py  test_pdf_renderer.py  test_rate_limit.py  test_reactivation_service.py  test_review_nudge_service.py  test_review_response_service.py  test_review_stats_service.py  test_reward_service.py  test_segment_service.py  test_stamp_engine.py  test_stripe_client.py  test_tap_with_campaign.py  test_taps_router.py  test_tenant_service.py  test_trial_enforcement.py  test_trial_service.py  test_twilio_sms_client.py  test_visit_thankyou_service.py  test_webhook_service.py  test_whatsapp_bot_service.py  test_whatsapp_client.py  test_whatsapp_webhook.py
docs/: GROWTH_AGENCY.md
(+152 files in other folders)
