[project]
name = "smarttap-backend"
version = "0.1.0"
description = "SmartTap FastAPI backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    # Required by `EmailStr` in app/schemas/customer.py. Pydantic only pulls
    # this in via the `pydantic[email]` extra, so without declaring it the
    # app crashes at schema-build time the moment that schema is imported
    # (e.g. the full FastAPI app, or any test that builds it). Declared
    # explicitly so the dependency is visible and the lock is reproducible.
    "email-validator>=2.2.0",
    "supabase>=2.10.0",
    "stripe>=11.4.1",
    "resend>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.19.2",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    # Pure-Python PDF generation for the monthly report (S4-W3). Pure Python
    # so it installs without cairo/pango system libs — keeps the Railway
    # build trivial. Pin upper bound loosely; reportlab is very API-stable.
    "reportlab>=4.2.0,<5.0.0",
    # Bundled IANA timezone database. Python's `zoneinfo` falls back to the
    # OS-provided tzdata on Linux/macOS; Windows ships nothing, so we declare
    # the package explicitly. Required by monthly_report_service which
    # anchors period bounds in Europe/Dublin.
    "tzdata>=2024.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "types-python-jose>=3.3.4.20240106",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# reportlab ships no type stubs and no third-party package provides full
# coverage. Accept untyped imports across the module tree rather than
# scattering `# type: ignore` comments through pdf_renderer.
[[tool.mypy.overrides]]
module = ["reportlab.*"]
ignore_missing_imports = true
